enable Boost_DEBUG add CMAKE_INCLUDE_PATH and CMAKE_LIBRARY_PATH add preprocessor PYIEX_EXPORTS and PYIMATH_EXPORTS install all header files change unistd.h to io.h in PyImathTask.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,12 @@ SET (BUILD_WITH_INSTALL_RPATH 1)
 
 SET (LIB_TYPE SHARED)
 
+# add boost include
+set(Boost_DEBUG 1)
+set(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} )
+set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} )
+add_definitions(-DBOOST_ALL_DYN_LINK)
+
 FIND_PACKAGE ( PythonLibs REQUIRED )
 FIND_PACKAGE ( PythonInterp REQUIRED )
 FIND_PACKAGE ( Boost
@@ -49,9 +55,12 @@ INCLUDE_DIRECTORIES (
 	PyImath
 	PyImathNumpy
 	${PYTHON_INCLUDE_PATH}
+	${CMAKE_INCLUDE_PATH}
 )
 
-LINK_DIRECTORIES ( ${ILMBASE_PACKAGE_PREFIX}/lib )
+LINK_DIRECTORIES ( ${ILMBASE_PACKAGE_PREFIX}/lib 
+				   ${CMAKE_LIBRARY_PATH}
+				 )
 MESSAGE ( "ILMBASE_PACKAGE_PREFIX = " ${ILMBASE_PACKAGE_PREFIX})
 
 
