--- a/PyIex/CMakeLists.txt
+++ b/PyIex/CMakeLists.txt
@@ -1,3 +1,4 @@
+add_definitions(-DPYIEX_EXPORTS)
 
 ADD_LIBRARY ( PyIex ${LIB_TYPE}
 	PyIex.cpp
@@ -16,9 +17,16 @@ ADD_LIBRARY ( iexmodule ${LIB_TYPE}
 	iexmodule.cpp
 )
 
-SET_TARGET_PROPERTIES ( iexmodule
-	PROPERTIES PREFIX "" SUFFIX ".so" BUILD_WITH_INSTALL_RPATH ON
-)
+IF(WIN32)
+    SET_TARGET_PROPERTIES ( iexmodule
+   	PROPERTIES PREFIX "" BUILD_WITH_INSTALL_RPATH ON
+    )
+ELSEIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+    SET_TARGET_PROPERTIES ( iexmodule
+    PROPERTIES PREFIX "" SUFFIX ".so" BUILD_WITH_INSTALL_RPATH ON
+    )
+ENDIF()
+
 
 TARGET_LINK_LIBRARIES ( iexmodule
 	PyIex
