--- a/PyIex/CMakeLists.txt
+++ b/PyIex/CMakeLists.txt
@@ -38,3 +38,8 @@ INSTALL ( TARGETS iexmodule
 	DESTINATION lib/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/site-packages
 )
 
+install(DIRECTORY ${PROJECT_INCLUDE_DIR}/
+    DESTINATION "include/OpenEXR"
+    FILES_MATCHING
+    PATTERN "*.h"
+    )
