--- a/PyImathNumpy/CMakeLists.txt
+++ b/PyImathNumpy/CMakeLists.txt
@@ -23,3 +23,8 @@ INSTALL ( TARGETS imathnumpymodule
 	DESTINATION lib/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/site-packages
 )
 
+install(DIRECTORY ${PROJECT_INCLUDE_DIR}/
+    DESTINATION "include/OpenEXR"
+    FILES_MATCHING
+    PATTERN "*.h"
+    )
