set output file suffix to .dll if under windows

--- a/PyImathNumpy/CMakeLists.txt
+++ b/PyImathNumpy/CMakeLists.txt
@@ -3,9 +3,15 @@ ADD_LIBRARY ( imathnumpymodule ${LIB_TYPE}
     imathnumpymodule.cpp
 )
 
-SET_TARGET_PROPERTIES ( imathnumpymodule
-	PROPERTIES PREFIX "" SUFFIX ".so" BUILD_WITH_INSTALL_RPATH ON
-)
+if(WIN32)
+	SET_TARGET_PROPERTIES ( imathnumpymodule
+	PROPERTIES PREFIX "" SUFFIX ".dll" BUILD_WITH_INSTALL_RPATH ON
+	)
+else()
+	SET_TARGET_PROPERTIES ( imathnumpymodule
+		PROPERTIES PREFIX "" SUFFIX ".so" BUILD_WITH_INSTALL_RPATH ON
+	)
+endif()
 
 INCLUDE_DIRECTORIES (
 	${NUMPY_INCLUDE_DIRS}
