add PLATFORM_WINDOWS so that pyimath symbol is exported

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,12 @@ SET(ILMBASE_VERSION_PATCH "0")
 SET(ILMBASE_VERSION ${ILMBASE_VERSION_MAJOR}.${ILMBASE_VERSION_MINOR}.${ILMBASE_VERSION_PATCH})
 SET(ILMBASE_VERSION_API ${ILMBASE_VERSION_MAJOR}_${ILMBASE_VERSION_MINOR})
 
+message("========================= in contrib/PyIlmBase-2.2.0/CMakeLists.txt =========================")
+set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${DISABLE_WARNING}")
+message("CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
 
 # enable the tests
 ENABLE_TESTING()
-
 
 # distro building 
 SET(CPACK_PACKAGE_VERSION_MAJOR "${ILMBASE_VERSION_MAJOR}")
@@ -63,6 +65,9 @@ LINK_DIRECTORIES ( ${ILMBASE_PACKAGE_PREFIX}/lib
 				 )
 MESSAGE ( "ILMBASE_PACKAGE_PREFIX = " ${ILMBASE_PACKAGE_PREFIX})
 
+if(WIN32)
+	add_definitions(-DPLATFORM_WINDOWS)
+endif()
 
 SET (ILMBASE_LIBSUFFIX "")
 IF (NAMESPACE_VERSIONING)
