--- a/PyImathNumpy/CMakeLists.txt
+++ b/PyImathNumpy/CMakeLists.txt
@@ -5,7 +5,8 @@ ADD_LIBRARY ( imathnumpymodule ${LIB_TYPE}
 
 if(WIN32)
 	SET_TARGET_PROPERTIES ( imathnumpymodule
-	PROPERTIES PREFIX "" SUFFIX ".dll" BUILD_WITH_INSTALL_RPATH ON
+	PROPERTIES PREFIX "" SUFFIX ".pyd" BUILD_WITH_INSTALL_RPATH ON
+	OUTPUT_NAME "imathnumpy"
 	)
 else()
 	SET_TARGET_PROPERTIES ( imathnumpymodule
